[package]
name = "handshake"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
description = """
Noise_IK_25519_ChaChaPoly_BLAKE2s
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "main.rs"

[dependencies]
rand_core = "0.5"
hkdf = "0.12"

x25519-dalek = "1.1"
chacha20poly1305 = "0.10"
blake2 = "0.10"

thiserror = "1"

[dev-dependencies]
snow = "0.9"
